# frontmatters

./: .gitignore  CRUSH.md  MCP_INTEGRATION.md  README.md  analysis.md  docs  out.json  pyproject.toml
data/: cipher-sessions.db-shm  cipher-sessions.db-wal
docs/: features_report.md
frontmatters/: __main__.py  hybrid.py  main.py  mcp_server.py
frontmatters/agents/: __init__.py  organizational_workflow.py
frontmatters/commands/: add_description.py  filter.py  organize.py  tree.py
frontmatters/core/: processor.py
n8n/: README.md  fireflies-to-obsidian-integration.json  obsidian-note-processor-workflow.json  phase1-summarization.json  phase2-categorization.json  phase3-tagging.json  phase4-enrichment.json  phase4-enrichment.json.backup  phase5-write-obsidian.json  setup-obsidian-processor.sh
tests/: test_add_description.py  test_agents.py  test_organize.py  test_tree.py
