[project]
name = "frontmatters"
version = "0.1.0"
description = "A tool to manage and manipulate frontmatter in markdown files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-frontmatter>=1.1.0",
  "openrouter>=1.0",
  "typer>=0.17.4",
  "agno>=2.0.0",
  "anthropic>=0.40.0",
  "openai>=1.0.0",
  "fastmcp>=0.1.0",
  "uvicorn>=0.30.0",
]
[project.scripts]
frontmatters = "frontmatters.main:app"
frontmatters-hybrid = "frontmatters.hybrid:main"
frontmatters-mcp = "frontmatters.mcp_server:mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
